--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
     /* font */
     --ff: "Bai Jamjuree", sans-serif;
-    --fs-base: 1.125rem;
+    --fs-base: 1, 125rem;
     --fw-regular: 400;
     --fw-semibold: 600;
     /* color */
@@ -97,4 +97,80 @@ body {
     font-weight: var(--fw-regular);
     font-size: var(--fs-base);
     background-color: #fff;
+}
+
+.section {
+    padding: 2rem 0 2rem;
+}
+
+.container {
+    width: max(100% - 3rem);
+    margin-inline: auto;
+}
+
+.button {
+    border: none;
+    outline: none;
+    text-decoration: none;
+    width: 100%;
+    padding: 1rem 0;
+    border-radius: 2rem;
+    font-size: 1.125rem;
+    letter-spacing: 2px;
+    font-weight: var(--fw-semibold);
+    color: #fff;
+    /* background-color: var(--clr-primary); */
+}
+
+.button:nth-child(1) {
+    background-color: var(--clr-primary);
+    box-shadow: inset 0 -3px 1px hsl(171, 66%, 35%),
+        0 10px 20px hsl(171, 66%, 44%, 0.3);
+}
+
+.button:nth-child(2) {
+    background-color: var(--clr-secondary);
+    box-shadow: inset 0 -3px 1px hsl(233, 100%, 64%),
+        0 10px 20px hsl(233, 100%, 69%, 0.3);
+}
+
+.button:is(:hover, :focus) {
+    filter: brightness(120%);
+    -webkit-filter: brightness(115%);
+}
+
+/* header */
+.header {
+    padding-block: 7.5rem;
+    text-align: center;
+
+    background-image: url(/images/bg-header-mobile.png);
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: contain;
+}
+
+.header__logo {
+    margin-inline: auto;
+    margin-bottom: 4rem;
+}
+
+.hero__title {
+    font-size: 2rem;
+    font-weight: var(--fw-semibold);
+    line-height: 1.2;
+    margin-bottom: 1rem;
+    color: var(--clr-neutral-400);
+}
+
+.hero__subtitle {
+    font-size: 1rem;
+
+    color: var(--clr-neutral-200);
+    margin-bottom: 3rem;
+}
+
+.cta {
+    gap: 1.5rem;
+    flex-direction: column;
 }
