--- a/css/style.css
+++ b/css/style.css
@@ -242,12 +242,17 @@ body {
 
 .content {
     gap: 3rem;
+    flex-direction: column;
 }
 
 .footer__logo {
     margin-inline: auto;
 
     width: 3.5rem;
+}
+
+.footer__menu {
+    flex-direction: column;
 }
 
 .footer__menu,
@@ -267,4 +272,120 @@ body {
 .sm__icon {
     font-size: 1.75rem;
     color: var(--clr-neutral-400);
+}
+
+/* desktop */
+@media (min-width: 600px) {
+    .container {
+        width: min(100% - 3rem, 1200px);
+    }
+
+    .button {
+        width: fit-content;
+        padding-inline: 2.5rem;
+    }
+
+    /* header */
+    .header {
+        background-image: url(/images/bg-header-desktop.png);
+    }
+
+    .hero__title {
+        font-size: 3rem;
+    }
+
+    .hero__subtitle {
+        font-size: 1.25rem;
+        width: min(100% - 3rem, 750px);
+        margin-inline: auto;
+        margin-bottom: 4rem;
+    }
+
+    .cta {
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 2rem;
+    }
+
+    /* main */
+    .section {
+        margin-block: 4rem;
+    }
+    .section__title {
+        font-size: 2rem;
+    }
+
+    .section__subtitle {
+        font-size: 1.25rem;
+        width: min(100% - 3rem, 750px);
+        margin-inline: auto;
+        margin-bottom: 5rem;
+    }
+
+    .section__img {
+        margin-inline: auto;
+    }
+
+    .feature {
+        grid-template-columns: 1fr 1fr;
+        gap: 6rem;
+    }
+
+    .feature__content {
+        align-items: flex-start;
+        text-align: left;
+        grid-column: 2;
+    }
+
+    .feature__img {
+        /* width: min(fit-content); */
+        width: fit-content;
+        /* position: absolute; */
+        /* left: 0; */
+    }
+
+    .feature__subtitle {
+        font-size: 1.25rem;
+        width: min(100%, 400px);
+    }
+
+    .section:nth-child(3) .feature__content {
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: center;
+    }
+
+    .wrapper:nth-child(1) .feature__icon {
+        margin-block: 2.25rem;
+    }
+
+    .testimonial {
+        grid-template-columns: repeat(5, 1fr);
+        margin-block: 8rem;
+    }
+
+    /* footer */
+    .footer .content {
+        flex-direction: row;
+        gap: 10rem;
+        align-items: center;
+        text-align: left;
+    }
+
+    .footer__logo {
+        margin-inline: 0;
+        height: fit-content;
+    }
+
+    .footer__menu {
+        flex-direction: row;
+        gap: 5rem;
+    }
+
+    .menu__list {
+        gap: 1rem;
+    }
+
+    .footer__sm {
+        margin-right: 0;
+    }
 }
